--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         style-src 'self' eds-static.equinor.com https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/ 'unsafe-inline';
         img-src 'self' eds-static.equinor.com data: 'self';
         font-src 'self' eds-static.equinor.com;
-        frame-src frame-src 'self' web.microsoftstream.com;">
+        frame-src 'self' web.microsoftstream.com;">
         
-        <title>Open Source vulnerabilities and dependencies - Onboarding Snyk</title>
+        <title>Snyk onboarding</title>
 
-        <link rel="icon" href="https://eds-static.equinor.com/logo/equinor-logo-primary.svg#white">
+        <link rel="icon" href="./content/images/appsec-icon.svg">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/reset.css" 
         integrity="sha512-Q4Cz3JE//UwVLFChrv/lzPe+rK0TVgs3uXcKEWpxZS9gXQ2VicPwx/CNfXG2CyFxwzlYKWKKiNk5aw21abBIzQ==" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/reveal.min.css" 
@@ -21,7 +21,8 @@
         <!-- Theme used for syntax highlighted code -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/plugin/highlight/monokai.css" 
         integrity="sha512-ITi+aXPAZ6cIHUIulO7jdT3gOiN9w4xIkyqJjFleAkjp2PLj0+oKmjIRlEjudk1bBvjNu4EkyFMstRzwZ+E0GA==" crossorigin="anonymous">
-        <link rel="stylesheet" href="./content/css/equinor.css" id="theme">
+        <link rel="stylesheet" href="./content/css/equinor.css" id="theme" 
+        integrity="sha512-I5gFjvXYCwV2KgvQR+flc2ADcvu79GBcr2zoFbgJz2dl5iWsigz6F6O/o4bJLIcy56/NZ+LBpiX4sfdIj4+dig==" crossorigin="anonymous">
     </head>
     <body>
 
@@ -71,7 +72,8 @@
 
         <!-- ******************** CONTENT END ******************** -->
         <script src="content/js/app.js" 
-        type="module" crossorigin="anonymous" referrerpolicy="no-referrer"></script>        
+        type="module" integrity="sha512-67CDHA21PPMVAul2wCD/UqL+FqQOFmS/U0w4nEB8wCpepZ7BaYJ0PwDhXKPrXort3y1SGab0qIjqwDuXxjlCzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/reveal.min.js"
         integrity="sha512-131e3mIrDAyUD075SVzvIjS0g97uDg0+/qAobDHd++h+lgFi4z88DVOpidm06jpb+0PzK4kcm9w79r6EHV0SkA==" 
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
