Start updating content

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         style-src 'self' eds-static.equinor.com https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/ 'unsafe-inline';
         img-src 'self' eds-static.equinor.com data: 'self';
         font-src 'self' eds-static.equinor.com;
-        frame-src 'self' web.microsoftstream.com;"
+        frame-src 'self' web.microsoftstream.com www.youtube-nocookie.com;
     />
 
     <title>Snyk onboarding</title>
