Adding Snyk sdlc drawing

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
           data-charset="utf-8"
         ></section>
 
-        <section
+        <!-- <section
           data-markdown="content/limitations.md"
           data-separator="^-----"
           data-separator-vertical="^---"
           data-separator-notes="^Note:"
           data-charset="utf-8"
-        ></section>
+        ></section> -->
 
         <section
           data-markdown="content/setup_integration_ui.md"
