--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
         ></section>
 
         <section
+          data-markdown="content/your_projects.md"
+          data-separator="^-----"
+          data-separator-vertical="^---"
+          data-separator-notes="^Note:"
+          data-charset="utf-8"
+        ></section>
+
+        <section
           data-markdown="content/epilog.md"
           data-separator="^-----"
           data-separator-vertical="^---"
