Rename snyk-intro, minor text updates

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         ></section>
 
         <section
-          data-markdown="content/automation_evaluation.md"
+          data-markdown="content/snyk-intro.md"
           data-separator="^-----"
           data-separator-vertical="^---"
           data-separator-notes="^Note:"
