Add section Snyk@Equinor - include info on tagging

--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
         ></section>
 
         <section
+          data-markdown="content/snyk_at_equinor.md"
+          data-separator="^-----"
+          data-separator-vertical="^---"
+          data-separator-notes="^Note:"
+          data-charset="utf-8"
+        ></section>
+
+
+        <section
           data-markdown="content/epilog.md"
           data-separator="^-----"
           data-separator-vertical="^---"
