--- a/index.html
+++ b/index.html
@@ -75,16 +75,8 @@
           data-charset="utf-8"
         ></section>
 
-        <!-- <section
-          data-markdown="content/limitations.md"
-          data-separator="^-----"
-          data-separator-vertical="^---"
-          data-separator-notes="^Note:"
-          data-charset="utf-8"
-        ></section> -->
-
         <section
-          data-markdown="content/setup_integration_ui.md"
+          data-markdown="content/snyk_demo.md"
           data-separator="^-----"
           data-separator-vertical="^---"
           data-separator-notes="^Note:"
@@ -107,6 +99,13 @@
           data-charset="utf-8"
         ></section>
 
+        <section
+          data-markdown="content/appsec_topics.md"
+          data-separator="^-----"
+          data-separator-vertical="^---"
+          data-separator-notes="^Note:"
+          data-charset="utf-8"
+        ></section>
 
         <section
           data-markdown="content/epilog.md"
